apps/base/voice-monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voice-monitor
  namespace: voice-monitor
spec:
  ingressClassName: traefik
  rules:
    - host: voice-monitor.landryzetam.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voice-monitor
                port:                  number: 80
